Fixed center movie-wrap

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -8738,7 +8738,7 @@ button:focus {
   transition: all .3s; }
 
 .movie-wrap {
-  padding: 100px 0 0 70px; }
+  padding: 100px 0 0 0; }
 
 .movie-watching {
   margin: 0 auto; }
