--- a/app/scss/pages/_movie.scss
+++ b/app/scss/pages/_movie.scss
@@ -102,7 +102,7 @@
 // Movie watching
 
 .movie-wrap {
-    padding: 100px 0 0 70px;
+    padding: 100px 0 0 0;
 }
 
 .movie-watching {
